Update Java versions to latest releases
New releases just came out.